# MailingService

./: .env.sample  .gitignore  README.md  boatsell  pyproject.toml
boat/: admin.py  forms.py  models.py  services.py  urls.py  views.py
boat/fixtures/: boat.json
boat/management/commands/: send_mailing.py
boat/migrations/: 0001_initial.py  0002_alter_client_options_alter_mailing_options_and_more.py  0002_client_user_message_user.py  0003_blog.py
boat/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
boat/templates/boat/: base.html  dashboard.html  home.html
boat/templates/clients/: client_confirm_delete.html  client_detail.html  client_form.html  client_list.html
boat/templates/mailings/: mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html
boat/templates/message/: message_confirm_delete.html  message_detail.html  message_form.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/fixtures/: users.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/registration/: login.html
users/templates/users/: password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  user_form.html  users_list.html
users/templatetags/: custom_tags.py
