[tool.poetry]
name = "cw6-boatsell"
version = "0.1.0"
description = ""
authors = ["Bloodimirg <bloodimirg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
django-crontab = "^0.7.1"
pytz = "^2024.1"
python-dotenv = "^1.0.1"
pillow = "^10.4.0"
django = "4.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
